--- a/ klcommon --username zmhn320@163.com/klhttpd/vsprj/klhttpd.vcproj
+++ b/ klcommon --username zmhn320@163.com/klhttpd/vsprj/klhttpd.vcproj
@@ -40,11 +40,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../compat/"
+				AdditionalIncludeDirectories="../compat/;../lua51/include/"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -61,7 +61,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib lua5.1.lib"
+				OutputFile="..\bin\$(ProjectName)D.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -117,9 +118,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../compat/"
+				AdditionalIncludeDirectories="../compat/;../lua51/include/"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -136,7 +137,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib lua5.1.lib"
+				OutputFile="..\bin\$(ProjectName).exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="1"
@@ -191,6 +193,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\klhttp-luacgi.c"
+				>
+			</File>
+			<File
 				RelativePath="..\src\klhttp-netbase.c"
 				>
 			</File>
@@ -222,6 +228,10 @@
 			</File>
 			<File
 				RelativePath="..\src\klhttp-internal.h"
+				>
+			</File>
+			<File
+				RelativePath="..\src\klhttp-luacgi.h"
 				>
 			</File>
 			<File
