--- a/ klcommon --username zmhn320@163.com/klluabinder/klluabinder.vcproj
+++ b/ klcommon --username zmhn320@163.com/klluabinder/klluabinder.vcproj
@@ -40,6 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="../src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -116,6 +117,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="../src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -177,7 +179,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\test_klluabinder.cpp"
+				RelativePath=".\klluabinder\test_klluabinder.cpp"
 				>
 			</File>
 		</Filter>
@@ -187,11 +189,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\kllua-binder.h"
+				RelativePath=".\klluabinder\kllua-binder.h"
 				>
 			</File>
 			<File
-				RelativePath=".\kllua-typetraits.h"
+				RelativePath=".\klluabinder\kllua-typetraits.h"
 				>
 			</File>
 		</Filter>
