--- a/ klcommon --username zmhn320@163.com/klluabinder/klluabinder.vcproj
+++ b/ klcommon --username zmhn320@163.com/klluabinder/klluabinder.vcproj
@@ -193,6 +193,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\klluabinder\kllua-caller.h"
+				>
+			</File>
+			<File
 				RelativePath=".\klluabinder\kllua-typetraits.h"
 				>
 			</File>
