--- a/ klcommon --username zmhn320@163.com/kllan/makefile
+++ b/ klcommon --username zmhn320@163.com/kllan/makefile
@@ -7,7 +7,8 @@ SRCDIR = .\src
 TMPDIR = .\tmp
 BINDIR = .\bin
 
-all: ${TMPDIR} ${BINDIR}/testlex.exe ${BINDIR}/testsyntax.exe ${BINDIR}/testinter.exe
+all: ${TMPDIR} ${BINDIR}/testlex.exe ${BINDIR}/testsyntax.exe ${BINDIR}/testinter.exe \
+	${BINDIR}/testplugin.exe
 
 ${TMPDIR}:
 	mkdir tmp
@@ -24,6 +25,9 @@ ${TMPDIR}/klsymtab.o: ${SRCDIR}/klsymtab.c ${SRCDIR}/klsymtab.h
 ${TMPDIR}/klinterpret.o: ${SRCDIR}/klinterpret.c ${SRCDIR}/klinterpret.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h ${SRCDIR}/klsymtab.h
 	${CC} ${CFLAG} $@ $<
 
+${TMPDIR}/kllib.o: ${SRCDIR}/kllib.c ${SRCDIR}/kllib.h ${SRCDIR}/klinterpret.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
+	${CC} ${CFLAG} $@ $<
+
 ${TMPDIR}/testlex.o: ${SRCDIR}/testlex.c ${SRCDIR}/kllex.h
 	${CC} ${CFLAG} $@ $<
 
@@ -33,6 +37,9 @@ ${TMPDIR}/testsyntax.o: ${SRCDIR}/testsyntax.c ${SRCDIR}/klparser.h ${SRCDIR}/kl
 ${TMPDIR}/testinter.o: ${SRCDIR}/testinter.c ${SRCDIR}/klinterpret.h ${SRCDIR}/klsymtab.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
 	${CC} ${CFLAG} $@ $<
 
+${TMPDIR}/testplugin.o: ${SRCDIR}/testklplugin.c ${SRCDIR}/kllib.h  ${SRCDIR}/klinterpret.h ${SRCDIR}/klsymtab.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
+	${CC} ${CFLAG} $@ $<
+
 ${BINDIR}/testlex.exe: ${TMPDIR}/kllex.o ${TMPDIR}/testlex.o
 	${LINK} ${LINKFLAG} $@ $^
 
@@ -40,6 +47,9 @@ ${BINDIR}/testsyntax.exe: ${TMPDIR}/testsyntax.o ${TMPDIR}/kllex.o ${TMPDIR}/klp
 	${LINK} ${LINKFLAG} $@ $^
 
 ${BINDIR}/testinter.exe: ${TMPDIR}/testinter.o ${TMPDIR}/klinterpret.o ${TMPDIR}/klsymtab.o ${TMPDIR}/klparser.o ${TMPDIR}/kllex.o
+	${LINK} ${LINKFLAG} $@ $^
+
+${BINDIR}/testplugin.exe: ${TMPDIR}/testplugin.o ${TMPDIR}/kllib.o ${TMPDIR}/klinterpret.o ${TMPDIR}/klsymtab.o ${TMPDIR}/klparser.o ${TMPDIR}/kllex.o
 	${LINK} ${LINKFLAG} $@ $^
 
 clean: 
