--- a/ klcommon --username zmhn320@163.com/kllan/makefile
+++ b/ klcommon --username zmhn320@163.com/kllan/makefile
@@ -1,66 +1,18 @@
-#makefile for kl interpred language
-CC = gcc
-LINK = gcc
-CFLAG = -c -Wall -g -I.\src -I.\plugin -IE:\libs\duma_2_5_14 -o
-LINKFLAG = -o
-SRCDIR = .\src
-TESTDIR = .\test
-PLUGINDIR = .\plugin
-TMPDIR = .\tmp
-BINDIR = .\bin
+#
+# Makefile for kl script.
+#
 
-all: ${TMPDIR} ${BINDIR}/testlex.exe ${BINDIR}/testsyntax.exe ${BINDIR}/testinter.exe \
-	${BINDIR}/testplugin.exe
+all:
+	cd src && $(MAKE)
+	cd plugin && $(MAKE)
+	cd test && $(MAKE)
 
-${TMPDIR}:
-	mkdir tmp
-
-${TMPDIR}/kllex.o: ${SRCDIR}/kllex.c ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $< 
-
-${TMPDIR}/klparser.o: ${SRCDIR}/klparser.c ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/klsymtab.o: ${SRCDIR}/klsymtab.c ${SRCDIR}/klsymtab.h 
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/klinterpret.o: ${SRCDIR}/klinterpret.c ${SRCDIR}/klinterpret.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h ${SRCDIR}/klsymtab.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/kllib.o: ${SRCDIR}/kllib.c ${SRCDIR}/kllib.h ${SRCDIR}/klinterpret.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/testlex.o: ${TESTDIR}/testlex.c ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/testsyntax.o: ${TESTDIR}/testsyntax.c ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/testinter.o: ${TESTDIR}/testinter.c ${SRCDIR}/klinterpret.h ${SRCDIR}/klsymtab.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/testplugin.o: ${TESTDIR}/testklplugin.c ${PLUGINDIR}/kllibbase.h ${SRCDIR}/kllib.h  ${SRCDIR}/klinterpret.h ${SRCDIR}/klsymtab.h ${SRCDIR}/klparser.h ${SRCDIR}/kllex.h
-	${CC} ${CFLAG} $@ $<
-
-${TMPDIR}/kllibbase.o: ${PLUGINDIR}/kllibbase.c ${PLUGINDIR}/kllibbase.h ${SRCDIR}/kllib.h
-	${CC} ${CFLAG} $@ $<
-
-${BINDIR}/testlex.exe: ${TMPDIR}/kllex.o ${TMPDIR}/testlex.o
-	${LINK} ${LINKFLAG} $@ $^ E:\libs\duma_2_5_14\libduma.a
-
-${BINDIR}/testsyntax.exe: ${TMPDIR}/testsyntax.o ${TMPDIR}/kllex.o ${TMPDIR}/klparser.o
-	${LINK} ${LINKFLAG} $@ $^ E:\libs\duma_2_5_14\libduma.a
-
-${BINDIR}/testinter.exe: ${TMPDIR}/testinter.o ${TMPDIR}/klinterpret.o ${TMPDIR}/klsymtab.o ${TMPDIR}/klparser.o ${TMPDIR}/kllex.o
-	${LINK} ${LINKFLAG} $@ $^ E:\libs\duma_2_5_14\libduma.a
-
-${BINDIR}/testplugin.exe: ${TMPDIR}/testplugin.o ${TMPDIR}/kllib.o ${TMPDIR}/klinterpret.o ${TMPDIR}/klsymtab.o ${TMPDIR}/klparser.o ${TMPDIR}/kllex.o \
-	${TMPDIR}/kllibbase.o
-	${LINK} ${LINKFLAG} $@ $^ E:\libs\duma_2_5_14\libduma.a
-
-clean: 
-	-rmdir /Q /S ${TMPDIR}
-	-del ${BINDIR}\*.exe
+clean:
+	cd src && $(MAKE) clean
+	cd plugin && $(MAKE) clean
+	cd test && $(MAKE) clean
 
 rebuild: clean all
+
+.PHONY: all clean rebuild
 
