--- a/ klcommon --username zmhn320@163.com/kllan/test/Makefile
+++ b/ klcommon --username zmhn320@163.com/kllan/test/Makefile
@@ -1,22 +1,32 @@
+# makefile for kl script test, including the standalone interpreter
 CC = gcc
 LINK = gcc
-CFLAG = -c -Wall -g -I../src -I../plugin -o
+override CFLAG += -c -Wall -I../src -I../plugin -o
 MMFLAG = -MM -I../src -I../plugin
 LINKFLAG = -o
-RM = del
+RM = rm 
 SRCDIR = ./
-TMPDIR = ../tmp
 BINDIR = ../bin
 LIBDIR = ../lib
 LIB = $(LIBDIR)/libkl.a $(LIBDIR)/libklplugin.a
 SRCLIST = $(wildcard *.c)
 OBJLIST = $(SRCLIST:%.c=%.o)
-EXTENSION = .exe
-TESTLEX = $(BINDIR)/testlex$(EXTENSION)
-TESTSYNTAX = $(BINDIR)/testsyntax$(EXTENSION)
-TESTINTER = $(BINDIR)/testinter$(EXTENSION)
-TESTPLUGIN = $(BINDIR)/testplugin$(EXTENSION)
-KLINTERPRETER = $(BINDIR)/kl$(EXTENSION)
+ifeq ($(OS), Windows)
+	BINDIR = ..\bin
+	TESTLEX = $(BINDIR)\testlex.exe
+	TESTSYNTAX = $(BINDIR)\testsyntax.exe
+	TESTINTER = $(BINDIR)\testinter.exe
+	TESTPLUGIN = $(BINDIR)\testplugin.exe
+	KLINTERPRETER = $(BINDIR)\kl.exe
+	RM = del
+else
+	TESTLEX = $(BINDIR)/testlex
+	TESTSYNTAX = $(BINDIR)/testsyntax
+	TESTINTER = $(BINDIR)/testinter
+	TESTPLUGIN = $(BINDIR)/testplugin
+	KLINTERPRETER = $(BINDIR)/kl
+	RM = rm
+endif
 
 all: Makefile.obj $(TESTLEX) $(TESTSYNTAX) $(TESTINTER) $(TESTPLUGIN) $(KLINTERPRETER)
 
@@ -46,8 +56,15 @@ $(KLINTERPRETER): kl.o $(LIB)
 clean:
 	-$(RM) *.o
 
-rebuild: clean all
+distclean: clean
+	-$(RM) $(TESTLEX)
+	-$(RM) $(TESTSYNTAX)
+	-$(RM) $(TESTINTER)
+	-$(RM) $(TESTPLUGIN)
+	-$(RM) $(KLINTERPRETER)	
 
-.PHONY: clean all rebuild
+rebuild: distclean all
+
+.PHONY: clean all rebuild distclean
 
 
