--- a/collections/prjs/autooff/Makefile
+++ b/collections/prjs/autooff/Makefile
@@ -1,10 +1,12 @@
-
-KLWINDIR = ../../../ klcommon --username zmhn320@163.com/kl_win
-KLWINDIRI = "$(KLWINDIR)"
-KLWINLIB = "$(KLWINDIR)/libklwin.a"
+#
+# makefile for autooff tool, used in mingw
+#
 SRCLIST = $(wildcard *.cpp)
 OBJLIST = $(SRCLIST:%.cpp=%.o)
+RESSRC = autooff.rc app.ico
+RESOBJ = autooff.res 
 TARGET = autooff.exe
+override CXXFLAG += -c -Wall
 CXX = g++
 LINK = g++
 
@@ -13,14 +15,19 @@ all: Makefile.obj $(TARGET)
 Makefile.obj: $(SRCLIST)
 	$(CXX) -MM $(SRCLIST) > $@
 
-$(KLWINLIB):
-	cd $(KLWINDIR) && $(MAKE)
-
 include Makefile.obj
 
 %.o: %.cpp
-	$(CXX) -Wall -c -I $(KLWINDIRI) $< 
+	$(CXX) $(CXXFLAG) $< 
 
-$(TARGET): $(OBJLIST) $(KLWINLIB)
-	$(LINK) -o $@ -lwinmm -mwindows $^
+$(RESOBJ): $(RESSRC)
+	windres $< -o $@ -O coff
+
+$(TARGET): $(OBJLIST) $(RESOBJ)
+	$(LINK) -o $@ -mwindows $^ -lws2_32
+
+clean:
+	del $(RESOBJ) $(OBJLIST)
+
+rebuild: clean all
 
