--- a/collections/prjs/autooff/autooff.rc
+++ b/collections/prjs/autooff/autooff.rc
@@ -12,14 +12,23 @@
 //
 // Dialog resources
 //
-LANGUAGE LANG_USER_DEFAULT, SUBLANG_NEUTRAL
-IDD_MAINDLG DIALOG 0, 0, 99, 95
+LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
+IDD_MAINDLG DIALOG 0, 0, 101, 100
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_VISIBLE | WS_BORDER | WS_CAPTION | WS_DLGFRAME | WS_POPUP | WS_SYSMENU
 CAPTION "AutoOff"
 FONT 8, "Ms Shell Dlg 2"
 {
-    DEFPUSHBUTTON   "开始", IDOK, 26, 77, 45, 14
-    AUTOCHECKBOX    "检测掉线", IDC_CHECKBOX1, 26, 21, 48, 10
-    AUTOCHECKBOX    "检测进程", IDC_CHECKBOX2, 26, 41, 48, 10
-    GROUPBOX        "Static", IDC_STATIC, 7, 5, 82, 65
+    DEFPUSHBUTTON   "开始", IDOK, 30, 79, 41, 14
+    GROUPBOX        "", IDC_STATIC, 15, 6, 70, 63
+    AUTOCHECKBOX    "检测进程", IDC_CHECKPROCESS, 30, 18, 48, 10
+    AUTOCHECKBOX    "检测网络", IDC_CHECKNET, 30, 36, 48, 10
+    AUTOCHECKBOX    "安全关机", IDC_SAFEOFF, 30, 52, 48, 10
 }
+
+
+
+//
+// Icon resources
+//
+LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
+IDI_ICON1          ICON           ".\\app.ico"
