--- a/collections/prjs/autooff/autooff.rc
+++ b/collections/prjs/autooff/autooff.rc
@@ -13,16 +13,33 @@
 // Dialog resources
 //
 LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
-IDD_MAINDLG DIALOG 0, 0, 101, 100
+IDD_MAINDLG DIALOG 0, 0, 101, 137
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_VISIBLE | WS_BORDER | WS_CAPTION | WS_DLGFRAME | WS_POPUP | WS_SYSMENU
 CAPTION "AutoOff"
 FONT 8, "Ms Shell Dlg 2"
 {
-    DEFPUSHBUTTON   "开始", IDOK, 30, 79, 41, 14
-    GROUPBOX        "", IDC_STATIC, 15, 6, 70, 63
+    DEFPUSHBUTTON   "开始", IDOK, 30, 119, 41, 14
+    GROUPBOX        "", IDC_STATIC, 10, 6, 81, 63
     AUTOCHECKBOX    "检测进程", IDC_CHECKPROCESS, 30, 18, 48, 10
     AUTOCHECKBOX    "检测网络", IDC_CHECKNET, 30, 36, 48, 10
     AUTOCHECKBOX    "安全关机", IDC_SAFEOFF, 30, 52, 48, 10
+    GROUPBOX        "", IDC_GROUP3, 10, 72, 81, 38
+    CTEXT           "       ", IDC_INFOTEXT, 13, 79, 74, 30, SS_CENTER
+}
+
+
+
+LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
+IDD_NOTIFYDLG DIALOG 0, 0, 149, 73
+STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_VISIBLE | WS_BORDER | WS_CAPTION | WS_DLGFRAME | WS_POPUP | WS_SYSMENU
+EXSTYLE WS_EX_TOPMOST
+CAPTION "提示"
+FONT 8, "Tahoma"
+{
+    DEFPUSHBUTTON   "立即关机", IDOK, 23, 53, 46, 14
+    PUSHBUTTON      "停止关机", IDCANCEL, 85, 53, 41, 14
+    CTEXT           "", IDC_TIMERINFO, 19, 14, 110, 30, SS_CENTER
+    GROUPBOX        "", IDC_STATIC, 9, 5, 130, 41
 }
 
 
