--- a/collections/prjs/actiond/validprocess.cfg
+++ b/collections/prjs/actiond/validprocess.cfg
@@ -2,35 +2,20 @@ System
 smss.exe
 csrss.exe
 winlogon.exe
-services.exe
-lsass.exe
-svchost.exe
+SERVICES.EXE
+LSASS.EXE
+SVCHOST.EXE
 spoolsv.exe
-WPService.exe
-MDM.EXE
-sqlservr.exe
-nvsvc32.exe
-PnkBstrA.exe
-sqlbrowser.exe
-alg.exe
-explorer.exe
+EXPLORER.EXE
 TSVNCache.exe
-RTHDCPL.exe
-SixEngine.exe
-rundll32.exe
-∑…«ÔFeiQ.exe
-acrotray.exe
+SOUNDMAN.EXE
 GooglePinyinDaemon.exe
-ctfmon.exe
-msmsgs.exe
-52hxw.exe
-ikuacc.exe
-OUTLOOK.EXE
-WINWORD.EXE
-Maxthon.exe
-gvim.exe
-cmd.exe
-conime.exe
-taskmgr.exe
-notepad.exe
+360Tray.exe
 actiond.exe
+USBKeyTools.exe
+ppsap.exe
+ctfmon.exe
+WPService.exe
+HZ_CommSrv.exe
+nvsvc32.exe
+alg.exe
