--- a/collections/prjs/compile/stack_machine/makefile
+++ b/collections/prjs/compile/stack_machine/makefile
@@ -6,20 +6,23 @@ RM = rm
 
 all: sm sasm
 
-sm: sm.o
+sm: sm.o sdasm.o
 	$(LINK) $(LINKFLAG) $@ $^
 
 sasm: sasm.o
 	$(LINK) $(LINKFLAG) $@ $^
 
-sm.o: sm.c sm.h
+sm.o: sm.c sm.h 
 	$(CC) $(CFLAG) $@ $<
 
 sasm.o: sasm.c sm.h
 	$(CC) $(CFLAG) $@ $<
 
+sdasm.o: sdasm.c sm.h
+	$(CC) $(CFLAG) $@ $<
+
 clean:
-	-$(RM) sm.o sasm.o sm sasm
+	-$(RM) sm.o sasm.o sdasm.o sm sasm
 
 rebuild: clean all
 
