--- a/collections/prjs/jabberbot/vssln/winapp.vcproj
+++ b/collections/prjs/jabberbot/vssln/winapp.vcproj
@@ -4,7 +4,7 @@
 	Version="8.00"
 	Name="winapp"
 	ProjectGUID="{F69C209A-8518-4363-877A-7C414010DB2B}"
-	RootNamespace="app"
+	RootNamespace="winapp"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../;../bot"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -119,7 +119,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="../;../bot"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -138,7 +138,6 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="Ws2_32.lib winmm.lib"
-				ShowProgress="0"
 				OutputFile="../bin/winapp.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
