--- a/collections/prjs/android/BlackList/AndroidManifest.xml
+++ b/collections/prjs/android/BlackList/AndroidManifest.xml
@@ -29,9 +29,16 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".PhoneStateBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PHONE_STATE" /> 
+            </intent-filter>
+        </receiver>
     </application>
     <uses-sdk android:minSdkVersion="7" />
     <uses-permission android:name="android.permission.READ_SMS"></uses-permission>  
     <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>  
     <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission> 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 </manifest> 
